# atk-sharp

./: Makefile.am  README.md  configure.ac
sources/: Makefile.am  atk-sharp-api.raw  atk-sharp.metadata  atk-sharp.snk
sources/glue/: Makefile.am
